fix: Nav Rail not blurring background on Safari
SKCom workaround! My favorite.

--- a/styles/global.css
+++ b/styles/global.css
@@ -95,3 +95,7 @@
 .skc-page-header__blobs {
   pointer-events: none;
 }
+
+.skc-nav-bar {
+  backdrop-filter: blur(16px) !important;
+}
